Fixed problem with partner logos not showing by using the metadata syntax instead of metafield. Added a loop to display all logos in the array

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1822,6 +1822,9 @@ section {
 
 section.special, article.special {
   text-align: center; }
+  section.special span, article.special span {
+    background-color: pink;
+    border: 1px solid red; }
 
 section.attentiongrab {
   background-color: #000;
